Updated button click animations, no longer stuck buttons in mobile.

--- a/Baseball 101/src/App.css
+++ b/Baseball 101/src/App.css
@@ -144,6 +144,20 @@ button {
   font-weight: 800;
   border: 0.1rem solid;
   border-color: white;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+.hintButton:active {
+  color: black;
+  background-color: white;
+  border-radius: 0.3rem;
+  border: 0.1rem solid;
+  transition: none;
+}
+
+.hintButton:hover {
+  cursor: pointer;
 }
 
 .revealButton {
@@ -154,13 +168,20 @@ button {
   font-weight: 800;
   border: 0.1rem solid;
   border-color: white;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+.revealButton:active {
+  color: white;
+  background-color: rgb(195, 69, 69);
+  border-radius: 0.3rem;
+  border: 0.1rem solid;
+  transition: none;
 }
 
 .revealButton:hover {
-  color: white;
-  background-color: rgb(195, 69, 69);
-  border: solid 1px;
-  border-color: white;
+  cursor: pointer;
 }
 
 #IP {
@@ -179,12 +200,12 @@ button {
   min-width: 3rem;
 }
 
-button:hover {
+/* button:hover {
   color: black;
   background-color: white;
   border-color: black;
   cursor: pointer;
-}
+} */
 
 .revealPlayerButton {
   min-height: 2rem;
@@ -254,7 +275,8 @@ button:hover {
   letter-spacing: -0.1rem;
   color: black;
   -webkit-text-stroke: 2px;
-  -webkit-text-stroke-color: rgb(59, 237, 178);
+  /* -webkit-text-stroke-color: rgb(59, 237, 178); */
+  -webkit-text-stroke-color:rgb(2, 190, 252, 100)
 }
 
 .scoreZero {
@@ -277,13 +299,18 @@ button:hover {
   height: 2rem;
   max-height: 2rem;
   padding: 0.15rem;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+#statsButton:active {
+  background-color: white;
+  border-radius: 0.3rem;
+  transition: none;
 }
 
 #statsButton:hover {
   cursor: pointer;
-  background-color: white;
-  border: 3px solid;
-  border-radius: 0.5rem;
 }
 
 #directionsButton {
@@ -293,6 +320,18 @@ button:hover {
   width: 2rem;
   height: 2rem;
   padding: 0.15rem;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+#directionsButton:active {
+  background-color: white;
+  border-radius: 0.3rem;
+  transition: none;
+}
+
+#directionsButton:hover {
+  cursor: pointer;
 }
 
 #dailyButton {
@@ -303,13 +342,18 @@ button:hover {
   height: 2rem;
   max-height: 2rem;
   padding: 0.15rem;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+#dailyButton:active {
+  background-color: white;
+  border-radius: 0.3rem;
+  transition: none;
 }
 
 #dailyButton:hover {
   cursor: pointer;
-  background-color: white;
-  border: 3px solid;
-  border-radius: 0.5rem;
 }
 
 #freePlayButton {
@@ -321,20 +365,18 @@ button:hover {
   max-height: 2rem;
   border-color: black;
   padding: 0.15rem;
+  transition: all 0.7s;
+  transition-delay: 300ms;
+}
+
+#freePlayButton:active {
+  background-color: white;
+  border-radius: 0.3rem;
+  transition: none;
 }
 
 #freePlayButton:hover {
   cursor: pointer;
-  background-color: white;
-  border: 3px solid;
-  border-radius: 0.5rem;
-}
-
-#directionsButton:hover {
-  cursor: pointer;
-  background-color: white;
-  border: 3px solid;
-  border-radius: 0.5rem;
 }
 
 #closeDirections {
